Use OpenRewrite to upgrade code to JDK 21
Use List.getFirst()/getLast()/...
Use URI.create()